// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PinInput /> should render textinput 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        accessibilityLabel="Insira o PIN 0"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 0"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 1"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 1"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 2"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 2"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 3"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 3"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
    </View>
    <TextInput
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      selection={
        {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with animated 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        accessibilityLabel="Insira o PIN 0"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 0"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 1"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 1"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 2"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 2"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 3"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 3"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
    </View>
    <TextInput
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      selection={
        {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with centered 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        accessibilityLabel="Insira o PIN 0"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 0"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 1"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 1"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 2"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 2"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 3"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 3"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
    </View>
    <TextInput
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      selection={
        {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with contrast 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        accessibilityLabel="Insira o PIN 0"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 0"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 1"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 1"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 2"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 2"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 3"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 3"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
    </View>
    <TextInput
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      selection={
        {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with custom caption 1`] = `
[
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignItems": "stretch",
          "flexDirection": "row",
          "height": 88,
          "justifyContent": "center",
          "position": "relative",
          "width": 380.2857142857143,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "margin": 0,
            "position": "absolute",
          }
        }
      >
        <View
          accessibilityLabel="Insira o PIN 0"
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderColor": null,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
          testID="Insira o PIN 0"
        >
          <Text
            style={
              [
                {
                  "color": null,
                  "fontSize": 40.85714285714286,
                },
                {},
              ]
            }
          />
        </View>
        <View
          accessibilityLabel="Insira o PIN 1"
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderColor": null,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
          testID="Insira o PIN 1"
        >
          <Text
            style={
              [
                {
                  "color": null,
                  "fontSize": 40.85714285714286,
                },
                {},
              ]
            }
          />
        </View>
        <View
          accessibilityLabel="Insira o PIN 2"
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderColor": null,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
          testID="Insira o PIN 2"
        >
          <Text
            style={
              [
                {
                  "color": null,
                  "fontSize": 40.85714285714286,
                },
                {},
              ]
            }
          />
        </View>
        <View
          accessibilityLabel="Insira o PIN 3"
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderColor": null,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
          testID="Insira o PIN 3"
        >
          <Text
            style={
              [
                {
                  "color": null,
                  "fontSize": 40.85714285714286,
                },
                {},
              ]
            }
          />
        </View>
      </View>
      <TextInput
        autoFocus={false}
        caretHidden={true}
        disableFullscreenUI={true}
        editable={true}
        keyboardType="numeric"
        maxLength={4}
        numberOfLines={1}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        selection={
          {
            "end": 0,
            "start": 0,
          }
        }
        spellCheck={false}
        style={
          {
            "flex": 1,
            "opacity": 0,
            "textAlign": "center",
          }
        }
        value=""
      />
    </View>
  </View>,
  <Text
    accessibilityLabel="test"
    centered={false}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 13,
          "lineHeight": 15.6,
        },
        {
          "fontWeight": "300",
          "opacity": 0.67,
          "textAlign": "left",
        },
      ]
    }
    variant="xs"
  >
    test
  </Text>,
]
`;

exports[`<PinInput /> should render textinput with custom code length 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 575.1428571428571,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        accessibilityLabel="Insira o PIN 0"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 0"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 1"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 1"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 2"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 2"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 3"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 3"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 4"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 4"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 5"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 5"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
    </View>
    <TextInput
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={6}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      selection={
        {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with custom error message 1`] = `
[
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        {
          "alignItems": "stretch",
          "flexDirection": "row",
          "height": 88,
          "justifyContent": "center",
          "position": "relative",
          "width": 380.2857142857143,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "height": "100%",
            "margin": 0,
            "position": "absolute",
          }
        }
      >
        <View
          accessibilityLabel="Insira o PIN 0"
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderColor": null,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
          testID="Insira o PIN 0"
        >
          <Text
            style={
              [
                {
                  "color": null,
                  "fontSize": 40.85714285714286,
                },
                {},
              ]
            }
          />
        </View>
        <View
          accessibilityLabel="Insira o PIN 1"
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderColor": null,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
          testID="Insira o PIN 1"
        >
          <Text
            style={
              [
                {
                  "color": null,
                  "fontSize": 40.85714285714286,
                },
                {},
              ]
            }
          />
        </View>
        <View
          accessibilityLabel="Insira o PIN 2"
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderColor": null,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
          testID="Insira o PIN 2"
        >
          <Text
            style={
              [
                {
                  "color": null,
                  "fontSize": 40.85714285714286,
                },
                {},
              ]
            }
          />
        </View>
        <View
          accessibilityLabel="Insira o PIN 3"
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "borderColor": null,
              "borderRadius": 8,
              "borderWidth": 2,
              "flexDirection": "row",
              "height": 88,
              "justifyContent": "center",
              "marginLeft": 4.714285714285714,
              "marginRight": 4.714285714285714,
              "width": 88,
            }
          }
          testID="Insira o PIN 3"
        >
          <Text
            style={
              [
                {
                  "color": null,
                  "fontSize": 40.85714285714286,
                },
                {},
              ]
            }
          />
        </View>
      </View>
      <TextInput
        autoFocus={false}
        caretHidden={true}
        disableFullscreenUI={true}
        editable={true}
        keyboardType="numeric"
        maxLength={4}
        numberOfLines={1}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        onKeyPress={[Function]}
        selection={
          {
            "end": 0,
            "start": 0,
          }
        }
        spellCheck={false}
        style={
          {
            "flex": 1,
            "opacity": 0,
            "textAlign": "center",
          }
        }
        value=""
      />
    </View>
  </View>,
  <Text
    accessibilityLabel="Erro testError"
    centered={false}
    large={false}
    lineHeightVariant="min"
    style={
      [
        {
          "color": "#444444",
          "fontSize": 13,
          "lineHeight": 15.6,
        },
        {
          "color": "#FF4F3F",
          "marginTop": 4,
          "textAlign": "left",
        },
      ]
    }
    testID="error_form_error"
    variant="xs"
  >
    testError
  </Text>,
]
`;

exports[`<PinInput /> should render textinput with custom ful fill 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        accessibilityLabel="Insira o PIN 0"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 0"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 1"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 1"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 2"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 2"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 3"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 3"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
    </View>
    <TextInput
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      selection={
        {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      testID="pinInput"
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with custom mask 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        accessibilityLabel="Insira o PIN 0"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 0"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 1"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 1"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 2"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 2"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 3"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 3"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
    </View>
    <TextInput
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      selection={
        {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with error 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        accessibilityLabel="Insira o PIN 0"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 0"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 1"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 1"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 2"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 2"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 3"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 3"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
    </View>
    <TextInput
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      selection={
        {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      value=""
    />
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with password 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        accessibilityLabel="Insira o PIN 0"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 0"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 1"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 1"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 2"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 2"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
      <View
        accessibilityLabel="Insira o PIN 3"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 3"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        />
      </View>
    </View>
    <TextInput
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      selection={
        {
          "end": 0,
          "start": 0,
        }
      }
      spellCheck={false}
      style={
        {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      value=""
    />
  </View>
  <View
    collapsable={false}
    style={
      {
        "marginLeft": 16,
      }
    }
  >
    <View
      accessibilityLabel="Exibir ou ocultar inputs - eye"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="Exibir ou ocultar inputs - eye"
    >
      <View>
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#4255EF",
                "fontSize": 37.714285714285715,
              },
              undefined,
              {
                "fontFamily": "FontAwesome5Free-Regular",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {
                "fontWeight": "400",
              },
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`<PinInput /> should render textinput with value 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      {
        "alignItems": "stretch",
        "flexDirection": "row",
        "height": 88,
        "justifyContent": "center",
        "position": "relative",
        "width": 380.2857142857143,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "height": "100%",
          "margin": 0,
          "position": "absolute",
        }
      }
    >
      <View
        accessibilityLabel="Insira o PIN 0"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 0"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        >
          t
        </Text>
      </View>
      <View
        accessibilityLabel="Insira o PIN 1"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 1"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        >
          e
        </Text>
      </View>
      <View
        accessibilityLabel="Insira o PIN 2"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 2"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        >
          s
        </Text>
      </View>
      <View
        accessibilityLabel="Insira o PIN 3"
        collapsable={false}
        style={
          {
            "alignItems": "center",
            "borderColor": null,
            "borderRadius": 8,
            "borderWidth": 2,
            "flexDirection": "row",
            "height": 88,
            "justifyContent": "center",
            "marginLeft": 4.714285714285714,
            "marginRight": 4.714285714285714,
            "width": 88,
          }
        }
        testID="Insira o PIN 3"
      >
        <Text
          style={
            [
              {
                "color": null,
                "fontSize": 40.85714285714286,
              },
              {},
            ]
          }
        >
          t
        </Text>
      </View>
    </View>
    <TextInput
      autoFocus={false}
      caretHidden={true}
      disableFullscreenUI={true}
      editable={true}
      keyboardType="numeric"
      maxLength={4}
      numberOfLines={1}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      selection={
        {
          "end": 7,
          "start": 7,
        }
      }
      spellCheck={false}
      style={
        {
          "flex": 1,
          "opacity": 0,
          "textAlign": "center",
        }
      }
      value="testing"
    />
  </View>
</View>
`;
